app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servidor-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' 
    alb.ingress.kubernetes.io/backend-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-path: "/health" 
    alb.ingress.kubernetes.io/healthcheck-port: "8080" 
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30" 
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5" 
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: servidor-service
                port:
                  number: 50051
